--- a/templates/cari/hareket_listesi.html
+++ b/templates/cari/hareket_listesi.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load custom_filters %}
 {% block title %}Cari Hareket Föyü{% endblock %}
 {% block page_title %}Cari Hareket Föyü{% endblock %}
 
@@ -60,7 +59,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for hareket in hareketler %}
+                    {% for item in hareketler_with_fatura %}
+                    {% with hareket=item.hareket fatura_id=item.fatura_id %}
                     <tr>
                         <td>{{ hareket.tarih|date:"d.m.Y H:i" }}</td>
                         <td>{{ hareket.cari.ad_soyad }}</td>
@@ -72,16 +72,10 @@
                         <td>{{ hareket.tutar|floatformat:2 }} ₺</td>
                         <td>
                             {% if hareket.belge_no %}
-                                {% if hareket.hareket_turu == 'satis_faturasi' or hareket.hareket_turu == 'alis_faturasi' %}
-                                    {% with fatura_id=fatura_nolari|get_item:hareket.belge_no %}
-                                        {% if fatura_id %}
-                                            <a href="{% url 'fatura:detay' fatura_id %}" class="text-primary text-decoration-none" title="Fatura Detayı">
-                                                <i class="bi bi-receipt"></i> {{ hareket.belge_no }}
-                                            </a>
-                                        {% else %}
-                                            {{ hareket.belge_no }}
-                                        {% endif %}
-                                    {% endwith %}
+                                {% if fatura_id %}
+                                    <a href="{% url 'fatura:detay' fatura_id %}" class="text-primary text-decoration-none" title="Fatura Detayı">
+                                        <i class="bi bi-receipt"></i> {{ hareket.belge_no }}
+                                    </a>
                                 {% else %}
                                     {{ hareket.belge_no }}
                                 {% endif %}
@@ -99,6 +93,7 @@
                             </a>
                         </td>
                     </tr>
+                    {% endwith %}
                     {% endfor %}
                 </tbody>
             </table>
