Son Kontroller Yapildi

--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -40,12 +40,9 @@
                     <p class="text-center text-muted mb-1">
                         Giriş bilgilerinizi hatırlıyor musunuz?
                     </p>
-                    <div class="d-flex justify-content-center gap-2">
+                    <div class="d-flex justify-content-center">
                         <a href="{% url 'login' %}" class="btn btn-outline-primary btn-sm">
                             <i class="bi bi-box-arrow-in-right"></i> Giriş Yap
-                        </a>
-                        <a href="{% url 'accounts:register' %}" class="btn btn-outline-light btn-sm">
-                            <i class="bi bi-person-plus"></i> Kayıt Ol
                         </a>
                     </div>
                 </div>
