--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -47,7 +47,7 @@
                             <i class="bi bi-person"></i> Kullanıcı Adı
                         </label>
                         <input type="text" class="form-control form-control-lg" id="id_username" name="username"
-                            required autofocus placeholder="Kullanıcı adınızı giriniz">
+                            required autofocus placeholder="Kullanıcı adınızı girin">
                     </div>
 
                     <div class="form-group">
@@ -55,7 +55,7 @@
                             <i class="bi bi-lock"></i> Şifre
                         </label>
                         <input type="password" class="form-control form-control-lg" id="id_password" name="password"
-                            required placeholder="Şifrenizi giriniz">
+                            required placeholder="Şifrenizi girin">
                     </div>
 
                     <div class="form-group">
